--- a/css/main.css
+++ b/css/main.css
@@ -525,16 +525,31 @@
 }
 
 /* line 15, _styleguide.scss */
-#grid .line {
+#grid .example .line {
   background-color: #d2f2fc;
   margin-bottom: .75em;
 }
 
 /* line 20, _styleguide.scss */
-#grid .unit div {
+#grid .example .unit div {
   margin: .75em 0;
   background-color: #74d8f4;
   padding: .75em;
+  text-align: center;
+}
+
+/* line 27, _styleguide.scss */
+#icons .icon {
+  font-size: 3em;
+}
+
+/* line 31, _styleguide.scss */
+#icons .largeIcon {
+  font-size: 6em;
+}
+
+/* line 35, _styleguide.scss */
+#icons .center {
   text-align: center;
 }
 
@@ -564,7 +579,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
   line-height: 1.5em;
 }
 
-/* line 27, main.scss */
+/* line 26, main.scss */
 .section {
   border-top: 2px solid #ecf0f1;
   padding-top: 1.875em;
@@ -572,7 +587,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
   margin: 1.875em 0;
 }
 
-/* line 34, main.scss */
+/* line 33, main.scss */
 body {
   background-color: white;
   font-size: 100%;
@@ -589,23 +604,23 @@ body {
   height: inherit;
 }
 
-/* line 53, main.scss */
+/* line 52, main.scss */
 line {
   zoom: 1;
 }
 
-/* line 57, main.scss */
+/* line 56, main.scss */
 .line:before, .line:after {
   content: " ";
   display: table;
 }
 
-/* line 62, main.scss */
+/* line 61, main.scss */
 .line:after {
   clear: both;
 }
 
-/* line 66, main.scss */
+/* line 65, main.scss */
 .unit {
   overflow: hidden;
   -moz-background-clip: padding-box !important;
@@ -615,7 +630,7 @@ line {
   padding-right: 1.5em;
 }
 
-/* line 75, main.scss */
+/* line 74, main.scss */
 .lastUnit {
   overflow: hidden;
   -moz-background-clip: padding-box !important;
@@ -627,99 +642,114 @@ line {
   padding-right: 0;
 }
 
-/* line 86, main.scss */
+/* line 85, main.scss */
 .size8of8 {
   width: 100%;
 }
 
-/* line 90, main.scss */
+/* line 89, main.scss */
 .size7of8 {
   width: 87.5%;
 }
 
-/* line 94, main.scss */
+/* line 93, main.scss */
 .size6of8 {
   width: 75%;
 }
 
-/* line 98, main.scss */
+/* line 97, main.scss */
 .size5of8 {
   width: 62.5%;
 }
 
-/* line 102, main.scss */
+/* line 101, main.scss */
 .size4of8 {
   width: 50%;
 }
 
-/* line 106, main.scss */
+/* line 105, main.scss */
 .size3of8 {
   width: 37.5%;
 }
 
-/* line 110, main.scss */
+/* line 109, main.scss */
 .size2of8 {
   width: 25%;
 }
 
-/* line 114, main.scss */
+/* line 113, main.scss */
 .size1of8 {
   width: 12.5%;
 }
 
-/* line 118, main.scss */
+/* line 117, main.scss */
 .size4of4 {
   width: 100%;
 }
 
-/* line 122, main.scss */
+/* line 121, main.scss */
 .size3of4 {
   width: 75%;
 }
 
-/* line 126, main.scss */
+/* line 125, main.scss */
 .size2of4 {
   width: 50%;
 }
 
-/* line 130, main.scss */
+/* line 129, main.scss */
 .size1of4 {
   width: 25%;
 }
 
-/* line 134, main.scss */
+/* line 133, main.scss */
 .size2of2 {
   width: 100%;
 }
 
-/* line 138, main.scss */
+/* line 137, main.scss */
 .size1of2 {
   width: 50%;
 }
 
-/* line 142, main.scss */
+/* line 141, main.scss */
 .size3of3 {
   width: 100%;
 }
 
-/* line 146, main.scss */
+/* line 145, main.scss */
 .size2of3 {
   width: 66.66666666666666%;
 }
 
-/* line 150, main.scss */
+/* line 149, main.scss */
 .size1of3 {
   width: 33.33333333333333%;
 }
 
-/* line 154, main.scss */
+/* line 153, main.scss */
 .size1of1 {
   width: 100%;
 }
 
-/* line 169, main.scss */
+/* line 157, main.scss */
+.alignRight {
+  text-align: right;
+}
+
+/* line 161, main.scss */
+.alignLeft {
+  text-align: left;
+}
+
+/* line 176, main.scss */
+.h0, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+  font-weight: bold;
+}
+
+/* line 181, main.scss */
 .h0 {
-  font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Avenir LT W01 85 Heavy", "Avenir Heavy" "Helvetica Neue", Arial, sans-serif;
   color: #15bded;
   font-size: 3em;
   line-height: 1.25em;
@@ -727,42 +757,42 @@ line {
   margin-bottom: 0.47916666666667em;
 }
 
-/* line 178, main.scss */
+/* line 190, main.scss */
 h1, .h1 {
-  font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Avenir LT W01 85 Heavy", "Avenir Heavy" "Helvetica Neue", Arial, sans-serif;
   color: #15bded;
   font-size: 2.25em;
   line-height: 1.3333333333em;
   margin-bottom: 0.5em;
 }
 
-/* line 186, main.scss */
+/* line 198, main.scss */
 h2, .h2 {
-  font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Avenir LT W01 85 Heavy", "Avenir Heavy" "Helvetica Neue", Arial, sans-serif;
   color: #7f8c8d;
   font-size: 2.25em;
   line-height: 1.3333333333em;
   margin-bottom: 0.33333333333333em;
 }
 
-/* line 194, main.scss */
+/* line 206, main.scss */
 h3, .h3 {
-  font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Avenir LT W01 85 Heavy", "Avenir Heavy" "Helvetica Neue", Arial, sans-serif;
   font-size: 1.5em;
   line-height: 1.5em;
   padding-top: 0.166666666667em;
   margin-bottom: 0.58333333333333em;
 }
 
-/* line 202, main.scss */
+/* line 214, main.scss */
 h4, .h4, h5, h6 {
-  font-family: "Avenir LT W01 85 Heavy", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Avenir LT W01 85 Heavy", "Avenir Heavy" "Helvetica Neue", Arial, sans-serif;
   font-size: 1.125em;
   line-height: 1.3333333333em;
   margin-bottom: 1em;
 }
 
-/* line 209, main.scss */
+/* line 221, main.scss */
 .xlarge {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.625em;
@@ -771,7 +801,7 @@ h4, .h4, h5, h6 {
   margin-bottom: 0.34615384615385em;
 }
 
-/* line 217, main.scss */
+/* line 229, main.scss */
 .large {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.25em;
@@ -780,7 +810,7 @@ h4, .h4, h5, h6 {
   margin-bottom: 0.5em;
 }
 
-/* line 225, main.scss */
+/* line 237, main.scss */
 .normal {
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   font-size: 1em;
@@ -790,7 +820,12 @@ h4, .h4, h5, h6 {
   font-weight: normal;
 }
 
-/* line 234, main.scss */
+/* line 246, main.scss */
+.small {
+  font-size: 0.875em;
+}
+
+/* line 250, main.scss */
 p {
   font-size: 1em;
   line-height: 1.5em;
@@ -798,25 +833,20 @@ p {
   max-width: 37.5em;
 }
 
-/* line 241, main.scss */
-a, a:visited {
+/* line 257, main.scss */
+a:not(.img):not(.button), a:visited:not(.img):not(.button) {
+  border-bottom: 2px solid;
   color: #15bded;
   text-decoration: none;
   font-weight: bold;
 }
 
-/* line 247, main.scss */
-a:not(.img), a:visited:not(.img) {
-  border-bottom: 2px solid;
-  color: #15bded;
-}
-
-/* line 252, main.scss */
-a:hover, a:visited:hover, a:active {
+/* line 264, main.scss */
+a:hover:not(.img):not(.button), a:visited:hover:not(.img):not(.button), a:active:not(.img):not(.button) {
   color: #0b7391;
 }
 
-/* line 257, main.scss */
+/* line 270, main.scss */
 a.anchor {
   display: block;
   position: relative;
@@ -824,7 +854,7 @@ a.anchor {
   visibility: hidden;
 }
 
-/* line 264, main.scss */
+/* line 277, main.scss */
 code, kbd, pre, samp {
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   padding: 0.125em 0.25em;
@@ -835,18 +865,21 @@ code, kbd, pre, samp {
   border-radius: 4px;
 }
 
-/* line 276, main.scss */
-button {
+/* line 290, main.scss */
+button, .button {
+  background: none;
+  float: none;
   height: 2.57142857142857em;
+  margin: 0;
   margin-right: 1.28571428571429em;
   display: inline-block;
   white-space: nowrap;
-  line-height: 2.57142857142857em;
-  font-size: 0.875em;
-  padding: 0 1.28571428571429em;
+  line-height: 2.57142857142857em !important;
+  font-size: 0.875em !important;
+  padding: 0 1.28571428571429em !important;
   cursor: pointer;
   overflow: hidden;
-  font-weight: bold;
+  font-weight: normal;
   text-align: center;
   font-family: "HelveticaNeueW01", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   border: 0 none;
@@ -860,54 +893,54 @@ button {
   outline: none;
 }
 
-/* line 300, main.scss */
-button:hover, button:active {
+/* line 317, main.scss */
+button:hover, button:active, .button:hover, .button:active {
   background-color: #617374;
   outline: none;
 }
 
-/* line 305, main.scss */
-button.buttonPrimary {
+/* line 322, main.scss */
+button.buttonPrimary, .button.buttonPrimary {
   background-color: #15bded;
 }
 
-/* line 309, main.scss */
-button.buttonPrimary:hover, button.buttonPrimary:active {
+/* line 326, main.scss */
+button.buttonPrimary:hover, button.buttonPrimary:active, .button.buttonPrimary:hover, .button.buttonPrimary:active {
   background-color: #0b7391;
 }
 
-/* line 313, main.scss */
-button:disabled {
+/* line 330, main.scss */
+button:disabled, .button:disabled {
   background-color: #ecf0f1;
   color: #bdc3c7;
 }
 
-/* line 318, main.scss */
-button.buttonLink {
+/* line 335, main.scss */
+button.buttonLink, .button.buttonLink {
   color: #15bded;
   background-color: transparent;
   border-bottom: 2px solid #15bded;
   border-radius: 0;
-  line-height: 1.11111111111111em;
-  padding: 0;
-  height: 1.28571428571429em;
-  margin: 0.64285714285714em 0;
+  line-height: 1.11111111111111em !important;
+  padding: 0 !important;
+  height: 1.28571428571429em !important;
+  margin: 0.64285714285714em 0 !important;
 }
 
-/* line 329, main.scss */
-button.buttonLink:hover, button.buttonLink:active {
+/* line 346, main.scss */
+button.buttonLink:hover, button.buttonLink:active, .button.buttonLink:hover, .button.buttonLink:active {
   color: #0b7391;
   border-bottom: 2px solid #0b7391;
 }
 
-/* line 334, main.scss */
-button.buttonLarge {
+/* line 351, main.scss */
+button.buttonLarge, .button.buttonLarge {
   height: 3em;
   line-height: 3em;
   font-size: 1em;
 }
 
-/* line 340, main.scss */
+/* line 357, main.scss */
 textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
   display: block;
   padding: 0 0.625em;
@@ -920,66 +953,86 @@ textarea, input[type="text"], input[type="password"], input[type="file"], input[
   border: 2px solid #95a5a6;
 }
 
-/* line 352, main.scss */
-button .icon {
+/* line 369, main.scss */
+button .icon, .button .icon {
   padding-right: 0.42857142857143em;
   color: inherit;
 }
 
-/* line 357, main.scss */
+/* line 374, main.scss */
 textarea:hover, input[type="text"]:hover, input[type="password"]:hover, input[type="file"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="date"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover, input[type="number"]:hover, input[type="email"]:hover, input[type="url"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="color"]:hover {
   border-color: #7f8c8d;
 }
 
-/* line 361, main.scss */
+/* line 378, main.scss */
 textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
   border: 2px solid #15bded;
   outline: none;
 }
 
-/* line 367, main.scss */
+/* line 384, main.scss */
 input::-webkit-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 370, main.scss */
+/* line 388, main.scss */
 input::-moz-placeholder {
   color: #bdc3c7;
 }
 
-/* line 373, main.scss */
+/* line 392, main.scss */
 input:-moz-placeholder {
   /* Older versions of Firefox */
   color: #bdc3c7;
 }
 
-/* line 376, main.scss */
+/* line 396, main.scss */
 input:-ms-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 380, main.scss */
+/* line 400, main.scss */
+.searchInput {
+  position: relative;
+}
+/* line 403, main.scss */
+.searchInput input {
+  max-width: inherit;
+}
+/* line 407, main.scss */
+.searchInput .icon {
+  position: absolute;
+  right: 10px;
+  top: 0;
+}
+
+/* line 414, main.scss */
+.inlineIcon {
+  line-height: inherit;
+}
+
+/* line 418, main.scss */
 textarea::-webkit-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 383, main.scss */
+/* line 422, main.scss */
 textarea::-moz-placeholder {
   color: #bdc3c7;
 }
 
-/* line 386, main.scss */
+/* line 426, main.scss */
 textarea:-moz-placeholder {
   /* Older versions of Firefox */
   color: #bdc3c7;
 }
 
-/* line 389, main.scss */
+/* line 430, main.scss */
 textarea:-ms-input-placeholder {
   color: #bdc3c7;
 }
 
-/* line 393, main.scss */
+/* line 434, main.scss */
 progress {
   width: 100%;
   background-color: #ecf0f1;
@@ -988,32 +1041,32 @@ progress {
   border-radius: 2px;
 }
 
-/* line 401, main.scss */
+/* line 442, main.scss */
 progress::-webkit-progress-bar {
   background-color: #ecf0f1;
   border-radius: 2px;
 }
 
-/* line 406, main.scss */
+/* line 447, main.scss */
 progress::-webkit-progress-value {
   background: #15bded;
   border-radius: 2px;
 }
 
-/* line 411, main.scss */
+/* line 452, main.scss */
 progress::-moz-progress-bar {
   background: #15bded;
   border-radius: 2px;
 }
 
-/* line 417, main.scss */
+/* line 458, main.scss */
 fieldset label, fieldset .label {
   display: inline-block;
   font-weight: bold;
   margin-bottom: 0.25em;
 }
 
-/* line 424, main.scss */
+/* line 465, main.scss */
 .localNav {
   border-bottom: 2px solid #ecf0f1;
   border-top: 2px solid #ecf0f1;
@@ -1022,28 +1075,28 @@ fieldset label, fieldset .label {
   margin-top: 1.5em;
   margin-bottom: 1.875em;
 }
-/* line 432, main.scss */
+/* line 473, main.scss */
 .localNav li {
   font-weight: bold;
   display: inline-block;
   overflow: visible;
   padding: 0.625em 0.9375em;
 }
-/* line 438, main.scss */
+/* line 479, main.scss */
 .localNav li a, .localNav li a:visited {
   color: #34495e;
   border-bottom: none;
 }
-/* line 443, main.scss */
+/* line 484, main.scss */
 .localNav li a:hover, .localNav li a:visited:hover, .localNav li a:active {
   color: #98afc6;
 }
-/* line 448, main.scss */
+/* line 489, main.scss */
 .localNav li.active a {
   color: #15bded;
 }
 
-/* line 454, main.scss */
+/* line 495, main.scss */
 .iconBlock {
   background-color: #ecf0f1;
   border-radius: 3px;
@@ -1051,7 +1104,7 @@ fieldset label, fieldset .label {
   font-size: 1.875em;
 }
 
-/* line 461, main.scss */
+/* line 502, main.scss */
 .iconBlock.disabled {
   background-color: none;
   color: #bdc3c7;
@@ -1059,67 +1112,67 @@ fieldset label, fieldset .label {
   padding: 0.23333333333333em;
 }
 
-/* line 470, main.scss */
+/* line 511, main.scss */
 table {
   width: 100%;
   border-collapse: collapse;
   border-color: none;
 }
-/* line 475, main.scss */
+/* line 516, main.scss */
 table thead {
   background-color: #ecf0f1;
 }
-/* line 479, main.scss */
+/* line 520, main.scss */
 table thead td {
   font-weight: bold;
 }
-/* line 483, main.scss */
+/* line 524, main.scss */
 table td, table th {
   word-wrap: break-word;
   border-left: 2px solid #ecf0f1;
   padding: 0.6875em 1.25em;
   vertical-align: middle;
 }
-/* line 490, main.scss */
+/* line 531, main.scss */
 table tr {
   border-bottom: 2px solid #ecf0f1;
 }
-/* line 494, main.scss */
+/* line 535, main.scss */
 table td:first-of-type, table tr:first-of-type {
   border-left: none;
 }
-/* line 498, main.scss */
+/* line 539, main.scss */
 table tr:last-of-type {
   border-bottom: none;
 }
-/* line 502, main.scss */
+/* line 543, main.scss */
 table tr.focus {
   background-color: #fcf3d0;
 }
-/* line 505, main.scss */
+/* line 546, main.scss */
 table tr.focus td, table tr.focus th {
   border-color: #fcf3d0;
 }
 
-/* line 512, main.scss */
+/* line 553, main.scss */
 #wrap {
   background-color: white;
   margin-left: 11.25em;
   margin-right: 0;
+  margin-top: 3.75em;
   width: auto;
   height: inherit;
   position: relative;
 }
 
-/* line 521, main.scss */
+/* line 563, main.scss */
 #content {
   background-color: white;
   padding: 2.625em 2.5em;
   padding-right: 3.75em;
-  margin-top: 3.75em;
 }
 
-/* line 529, main.scss */
+/* line 569, main.scss */
 #mainNav {
   position: fixed;
   top: 0;
@@ -1131,13 +1184,13 @@ table tr.focus td, table tr.focus th {
   z-index: 200;
   transition: all .2s ease-in-out;
 }
-/* line 539, main.scss */
+/* line 579, main.scss */
 #mainNav .logo {
   width: 11.25em;
   height: 100%;
   display: inline-block;
 }
-/* line 544, main.scss */
+/* line 584, main.scss */
 #mainNav .logo img {
   position: relative;
   top: .5em;
@@ -1145,27 +1198,27 @@ table tr.focus td, table tr.focus th {
   padding-top: 0.5625em;
   height: 2.25em;
 }
-/* line 553, main.scss */
+/* line 593, main.scss */
 #mainNav .search {
   margin-left: 2.5em;
   position: relative;
 }
-/* line 557, main.scss */
+/* line 597, main.scss */
 #mainNav .search input {
   display: inline-block;
   width: 30%;
   min-width: 22.5em;
   border: 2px solid #a3e5f8;
 }
-/* line 564, main.scss */
+/* line 604, main.scss */
 #mainNav .search input:hover {
   border-color: #00a1cf;
 }
-/* line 567, main.scss */
+/* line 607, main.scss */
 #mainNav .search input:focus {
   border: 2px solid #00799c;
 }
-/* line 571, main.scss */
+/* line 611, main.scss */
 #mainNav .search .inputLink {
   position: absolute;
   right: 2.75em;
@@ -1173,60 +1226,60 @@ table tr.focus td, table tr.focus th {
   color: #34495e;
   font-weight: normal;
 }
-/* line 579, main.scss */
+/* line 619, main.scss */
 #mainNav .search .icon {
   position: absolute;
   right: 0.7em;
   line-height: 2.9em;
 }
-/* line 585, main.scss */
+/* line 625, main.scss */
 #mainNav .search .inputLink {
   line-height: 3.75em;
 }
-/* line 589, main.scss */
+/* line 629, main.scss */
 #mainNav .search .inputLink:hover, #mainNav .search .icon:hover {
   color: #98afc6;
 }
-/* line 594, main.scss */
+/* line 634, main.scss */
 #mainNav ul {
   display: inline-block;
   float: right;
   margin-right: 2.5em;
 }
-/* line 599, main.scss */
+/* line 639, main.scss */
 #mainNav ul .icon {
   position: relative;
   margin-left: 0.2em;
 }
-/* line 604, main.scss */
+/* line 644, main.scss */
 #mainNav ul li {
   display: inline-block;
   line-height: 3.75em;
   color: #34495e;
 }
-/* line 610, main.scss */
+/* line 650, main.scss */
 #mainNav ul li a {
   border: none;
   font-weight: bold;
   color: inherit;
   padding: 0 1.25em;
 }
-/* line 618, main.scss */
+/* line 658, main.scss */
 #mainNav ul li:hover {
   background-color: #74d8f4;
 }
 
-/* line 627, main.scss */
+/* line 667, main.scss */
 #mainNav.slideUp {
   top: -3.75em;
 }
 
-/* line 631, main.scss */
+/* line 671, main.scss */
 #mainNav.slideDown {
   top: 0;
 }
 
-/* line 635, main.scss */
+/* line 675, main.scss */
 #sideNav {
   overflow-y: auto;
   background-color: #ecf0f1;
@@ -1238,29 +1291,29 @@ table tr.focus td, table tr.focus th {
   padding-top: 3.75em;
   z-index: 100;
 }
-/* line 646, main.scss */
+/* line 686, main.scss */
 #sideNav a {
   border: none;
   font-weight: bold;
   color: inherit;
 }
-/* line 652, main.scss */
+/* line 692, main.scss */
 #sideNav li {
   padding: 0 1.25em;
   font-size: 1em;
   line-height: 3.75em;
   color: #95a5a6;
 }
-/* line 659, main.scss */
+/* line 699, main.scss */
 #sideNav li.selected {
   color: #34495e;
 }
-/* line 663, main.scss */
+/* line 703, main.scss */
 #sideNav li:hover {
   background-color: rgba(189, 195, 199, 0.3);
   color: #34495e;
 }
-/* line 668, main.scss */
+/* line 708, main.scss */
 #sideNav .icon {
   padding-right: 0.4em;
   color: inherit;
