--- a/css/main.scss
+++ b/css/main.scss
@@ -6,11 +6,11 @@
 	box-sizing: border-box;
 }
 
-html{
+html {
 	height:100%;
 }
 
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,code,del,dfn,em,img,q,dl,dt,dd,ol,ul,li,fieldset,form, textarea, input, select, label,legend,textarea,table,caption,tbody,tfoot,thead,tr,th,td{
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,code,del,dfn,em,img,q,dl,dt,dd,ol,ul,li,fieldset,form, textarea, input, select, label,legend,textarea,table,caption,tbody,tfoot,thead,tr,th,td {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -21,7 +21,6 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acron
 	vertical-align: baseline;
 	-webkit-font-smoothing: antialiased;
 	line-height: 1.5em;
-
 }
 
 .section {
@@ -155,6 +154,14 @@ line {
 	width:100%;
 }
 
+.alignRight {
+  text-align: right;
+}
+
+.alignLeft {
+  text-align: left;
+}
+
 // Could potentially set a max-width so things never scale out too far
 // .size1of2:first-child {
 // 	max-width:580px;
@@ -165,6 +172,11 @@ line {
 // }
 
 // Typography
+
+.h0, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+	font-weight: bold;
+}
+
 
 .h0 {
 	font-family: $titleFontStack;
@@ -231,6 +243,10 @@ h4, .h4, h5, h6 {
 	font-weight: normal;
 }
 
+.small {
+	font-size: 0.875em;
+}
+
 p {
 	font-size: 1em;
 	line-height: 1.5em;
@@ -238,20 +254,17 @@ p {
 	max-width: 37.5em;
 }
 
-a, a:visited {
-	color: $blueLight;
-	text-decoration: none;
-	font-weight: bold;
+a:not(.img):not(.button), a:visited:not(.img):not(.button) {
+  border-bottom: 2px solid;
+  color: $blueLight;
+  text-decoration: none;
+  font-weight: bold;
 }
 
-a:not(.img), a:visited:not(.img) { 
-	border-bottom: 2px solid;
-	color: $blueLight;
+a:hover:not(.img):not(.button), a:visited:hover:not(.img):not(.button), a:active:not(.img):not(.button) {
+  color: darken($blueLight, 20%);
 }
 
-a:hover, a:visited:hover, a:active {
-	color: darken($blueLight, 20%);
-}
 
 // Accounts for extra space on fixed header
 a.anchor {
@@ -273,85 +286,89 @@ code, kbd, pre, samp {
 
 // Forms
 
-button {
-	height: 2.57142857142857em;
-	margin-right: 1.28571428571429em;
-	display: inline-block;
-	white-space: nowrap;
-	line-height: 2.57142857142857em;
-	font-size: 0.875em;
-	padding: 0 1.28571428571429em;
-	cursor: pointer;
-	overflow: hidden;
-	font-weight: bold;
-	text-align: center;
-	font-family: $bodyFontStack;
-	border: 0 none;
-	border-radius: 5px;
-	-webkit-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	color: white;
-	letter-spacing: .02em;
-	background-color: $gray3;
-	outline: none;
+
+button, .button {
+    background: none;
+    float: none;
+    height: 2.57142857142857em;
+    margin: 0;
+    margin-right: 1.28571428571429em;
+    display: inline-block;
+    white-space: nowrap;
+    line-height: 2.57142857142857em !important; // Extra stuff to override profileV4 (sigh)
+    font-size: 0.875em !important;
+    padding: 0 1.28571428571429em !important;
+    cursor: pointer;
+    overflow: hidden;
+    font-weight: normal;
+    text-align: center;
+    font-family: $bodyFontStack;
+    border: 0 none;
+    border-radius: 5px;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    color: white;
+    letter-spacing: .02em;
+    background-color: $gray3;
+    outline: none;
+  }
+
+button:hover, button:active, .button:hover, .button:active {
+    background-color: darken($gray3, 20%);
+    outline: none;
 }
 
-button:hover, button:active {
-	background-color: darken($gray3, 20%);
-	outline: none;
+button.buttonPrimary,  .button.buttonPrimary {
+    background-color: $blueLight;
 }
 
-button.buttonPrimary {
-	background-color: $blueLight;
+button.buttonPrimary:hover, button.buttonPrimary:active, .button.buttonPrimary:hover, .button.buttonPrimary:active {
+    background-color: darken($blueLight, 20%);
 }
 
-button.buttonPrimary:hover, button.buttonPrimary:active {
-	background-color: darken($blueLight, 20%)
+button:disabled, .button:disabled  {
+    background-color: $gray1;
+    color: $gray2;
 }
 
-button:disabled {
-	background-color: $gray1;
-	color: $gray2;
+button.buttonLink, .button.buttonLink {
+    color: $blueLight;
+    background-color: transparent;
+    border-bottom: 2px solid $blueLight;
+    border-radius: 0;
+    line-height: 1.11111111111111em !important;
+    padding: 0 !important;
+    height: 1.28571428571429em !important;
+    margin: 0.64285714285714em 0 !important;
 }
 
-button.buttonLink {
-	color: $blueLight;
-	background-color: transparent;
-	border-bottom: 2px solid $blueLight;
-	border-radius: 0;
-	line-height: 1.11111111111111em;
-	padding: 0;
-	height: 1.28571428571429em;
-	margin: 0.64285714285714em 0;
+button.buttonLink:hover, button.buttonLink:active, .button.buttonLink:hover, .button.buttonLink:active {
+    color: darken($blueLight, 20%);
+    border-bottom: 2px solid darken($blueLight, 20%);
 }
 
-button.buttonLink:hover, button.buttonLink:active{
-	color: darken($blueLight, 20%);
-	border-bottom: 2px solid darken($blueLight, 20%);
-}
-
-button.buttonLarge {
-	height: 3em;
-	line-height: 3em;
-	font-size: 1em;
+button.buttonLarge, .button.buttonLarge {
+    height: 3em;
+    line-height: 3em;
+    font-size: 1em;
 }
 
 textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
-	display: block;
-	padding: 0 0.625em;
-	border-radius: 0.3125em;
-	min-width: 3.75em;
-	max-width: 37.5em;
-	width: 100%;
-	min-height: 2.25em;
-	background-color: $white;
-	border: 2px solid $gray3;
+    display: block;
+    padding: 0 0.625em;
+    border-radius: 0.3125em;
+    min-width: 3.75em;
+    max-width: 37.5em;
+    width: 100%;
+    min-height: 2.25em;
+    background-color: $white;
+    border: 2px solid $gray3;
 }
 
-button .icon {
-	padding-right: 0.42857142857143em;
-	color: inherit;
+button .icon, .button .icon {
+    padding-right: 0.42857142857143em;
+    color: inherit;
 }
 
 textarea:hover, input[type="text"]:hover, input[type="password"]:hover, input[type="file"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="date"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover, input[type="number"]:hover, input[type="email"]:hover, input[type="url"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="color"]:hover {
@@ -367,25 +384,49 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
 input::-webkit-input-placeholder {
 	color: $gray2;
 }
+
 input::-moz-placeholder {
 	color: $gray2;
 }
+
 input:-moz-placeholder {   /* Older versions of Firefox */
 	color: $gray2;
 }
+
 input:-ms-input-placeholder { 
 	color: $gray2;
+}
+
+.searchInput {
+    position: relative;
+
+    input {
+      max-width: inherit;
+    }
+
+    .icon {
+      position: absolute;
+      right: 10px;
+      top: 0;
+    }
+}
+
+.inlineIcon {
+    line-height: inherit;
 }
 
 textarea::-webkit-input-placeholder {
 	color: $gray2;
 }
+
 textarea::-moz-placeholder {
 	color: $gray2;
 }
+
 textarea:-moz-placeholder {   /* Older versions of Firefox */
 	color: $gray2;
 }
+
 textarea:-ms-input-placeholder { 
 	color: $gray2;
 }
@@ -513,6 +554,7 @@ table {
 	background-color: $white;
 	margin-left: 11.25em;
 	margin-right: 0;
+	margin-top: 3.75em;
 	width: auto;
 	height: inherit;
 	position: relative;
@@ -521,9 +563,7 @@ table {
 #content {
 	background-color: $white;
 	padding: 2.625em 2.5em;
-	padding-right: 3.75em;
-	margin-top: 3.75em;
-
+	padding-right: 3.75em; // Only turn on for responsive layouts
 }
 
 #mainNav {
