--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -8,7 +8,7 @@ $gray4: #7F8C8D;
 $gray5: #34495E; $defaultColor: #34495E; // Default
 $gray6: #2C3E50; // Darkest
 
-$blueLight: #15BDED;
+$blueLight: #00A1CF;
 $blueDark: #00A1CF; // Panjiva blue
 $greenLight: #2ECC71;
 $greenDark: #27AE60;
