revert blue light

--- a/css/main.css
+++ b/css/main.css
@@ -531,14 +531,14 @@
 
 /* line 15, _styleguide.scss */
 #grid .example .line {
-  background-color: #9ce9ff;
+  background-color: #d2f2fc;
   margin-bottom: .75em;
 }
 
 /* line 20, _styleguide.scss */
 #grid .example .unit div {
   margin: .75em 0;
-  background-color: #36d2ff;
+  background-color: #74d8f4;
   padding: .75em;
   text-align: center;
 }
@@ -755,7 +755,7 @@ line {
 /* line 181, main.scss */
 .h0 {
   font-family: "Avenir LT W01 85 Heavy", "Avenir Heavy" "Helvetica Neue", Arial, sans-serif;
-  color: #00a1cf;
+  color: #15bded;
   font-size: 3em;
   line-height: 1.25em;
   padding-top: 0.02083333333333em;
@@ -765,7 +765,7 @@ line {
 /* line 190, main.scss */
 h1, .h1 {
   font-family: "Avenir LT W01 85 Heavy", "Avenir Heavy" "Helvetica Neue", Arial, sans-serif;
-  color: #00a1cf;
+  color: #15bded;
   font-size: 2.25em;
   line-height: 1.3333333333em;
   margin-bottom: 0.5em;
@@ -841,14 +841,14 @@ p {
 /* line 257, main.scss */
 a:not(.img):not(.button), a:visited:not(.img):not(.button) {
   border-bottom: 2px solid;
-  color: #00a1cf;
+  color: #15bded;
   text-decoration: none;
   font-weight: bold;
 }
 
 /* line 264, main.scss */
 a:hover:not(.img):not(.button), a:visited:hover:not(.img):not(.button), a:active:not(.img):not(.button) {
-  color: #005269;
+  color: #0b7391;
 }
 
 /* line 270, main.scss */
@@ -906,12 +906,12 @@ button:hover, button:active, .button:hover, .button:active {
 
 /* line 322, main.scss */
 button.buttonPrimary, .button.buttonPrimary {
-  background-color: #00a1cf;
+  background-color: #15bded;
 }
 
 /* line 326, main.scss */
 button.buttonPrimary:hover, button.buttonPrimary:active, .button.buttonPrimary:hover, .button.buttonPrimary:active {
-  background-color: #005269;
+  background-color: #0b7391;
 }
 
 /* line 330, main.scss */
@@ -922,9 +922,9 @@ button:disabled, .button:disabled {
 
 /* line 335, main.scss */
 button.buttonLink, .button.buttonLink {
-  color: #00a1cf;
+  color: #15bded;
   background-color: transparent;
-  border-bottom: 2px solid #00a1cf;
+  border-bottom: 2px solid #15bded;
   border-radius: 0;
   line-height: 1.11111111111111em !important;
   padding: 0 !important;
@@ -934,8 +934,8 @@ button.buttonLink, .button.buttonLink {
 
 /* line 346, main.scss */
 button.buttonLink:hover, button.buttonLink:active, .button.buttonLink:hover, .button.buttonLink:active {
-  color: #005269;
-  border-bottom: 2px solid #005269;
+  color: #0b7391;
+  border-bottom: 2px solid #0b7391;
 }
 
 /* line 351, main.scss */
@@ -971,7 +971,7 @@ textarea:hover, input[type="text"]:hover, input[type="password"]:hover, input[ty
 
 /* line 378, main.scss */
 textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
-  border: 2px solid #00a1cf;
+  border: 2px solid #15bded;
   outline: none;
 }
 
@@ -1054,13 +1054,13 @@ progress::-webkit-progress-bar {
 
 /* line 447, main.scss */
 progress::-webkit-progress-value {
-  background: #00a1cf;
+  background: #15bded;
   border-radius: 2px;
 }
 
 /* line 452, main.scss */
 progress::-moz-progress-bar {
-  background: #00a1cf;
+  background: #15bded;
   border-radius: 2px;
 }
 
@@ -1098,7 +1098,7 @@ fieldset label, fieldset .label {
 }
 /* line 489, main.scss */
 .localNav li.active a {
-  color: #00a1cf;
+  color: #15bded;
 }
 
 /* line 495, main.scss */
@@ -1184,7 +1184,7 @@ table tr.focus td, table tr.focus th {
   left: 0;
   height: 3.75em;
   width: 100%;
-  background-color: #00a1cf;
+  background-color: #15bded;
   overflow: hidden;
   z-index: 200;
   transition: all .2s ease-in-out;
@@ -1213,7 +1213,7 @@ table tr.focus td, table tr.focus th {
   display: inline-block;
   width: 30%;
   min-width: 22.5em;
-  border: 2px solid #69deff;
+  border: 2px solid #a3e5f8;
 }
 /* line 604, main.scss */
 #mainNav .search input:hover {
@@ -1271,7 +1271,7 @@ table tr.focus td, table tr.focus th {
 }
 /* line 658, main.scss */
 #mainNav ul li:hover {
-  background-color: #36d2ff;
+  background-color: #74d8f4;
 }
 
 /* line 667, main.scss */
