--- a/css/main.scss
+++ b/css/main.scss
@@ -281,7 +281,7 @@ code, kbd, pre, samp {
 	color: $redDark;
 	background-color: lighten($redDark, 50%);
 	white-space: nowrap;
-	border-radius: 4px;
+	border-radius: $borderRadius;
 }
 
 // Forms
@@ -304,7 +304,7 @@ button, .button {
     text-align: center;
     font-family: $bodyFontStack;
     border: 0 none;
-    border-radius: 5px;
+    border-radius: $borderRadius;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -340,7 +340,6 @@ button.buttonLink, .button.buttonLink {
     line-height: 1.11111111111111em !important;
     padding: 0 !important;
     height: 1.28571428571429em !important;
-    margin: 0.64285714285714em 0 !important;
 }
 
 button.buttonLink:hover, button.buttonLink:active, .button.buttonLink:hover, .button.buttonLink:active {
@@ -357,7 +356,7 @@ button.buttonLarge, .button.buttonLarge {
 textarea, input[type="text"], input[type="password"], input[type="file"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
     display: block;
     padding: 0 0.625em;
-    border-radius: 0.3125em;
+    border-radius: $borderRadius;
     min-width: 3.75em;
     max-width: 37.5em;
     width: 100%;
@@ -436,22 +435,22 @@ progress {
 	background-color: $gray1;
 	border: none;
 	height: 1.5em;
-	border-radius: 2px;
+	border-radius: $borderRadius;
 }
 
 progress::-webkit-progress-bar{
 	background-color:$gray1;
-	border-radius:2px
+	border-radius:$borderRadius;
 }
 
 progress::-webkit-progress-value {
 	background:$blueLight;
-	border-radius:2px
+	border-radius:$borderRadius;
 }
 
 progress::-moz-progress-bar{
 	background:$blueLight;
-	border-radius:2px
+	border-radius:$borderRadius;
 }
 
 fieldset {
@@ -494,7 +493,7 @@ fieldset {
 // Icons
 .iconBlock {
 	background-color: $gray1;
-	border-radius: 3px;
+	border-radius: $borderRadius;
 	padding: 0.3em;
 	font-size: 1.875em;
 }
