--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -328,3 +328,15 @@
 .panjiva-icon-bell:before {
 	content: "\e65d";
 }
+.panjiva-icon-down-arrow:before {
+	content: "\e65e";
+}
+.panjiva-icon-left-arrow:before {
+	content: "\e65f";
+}
+.panjiva-icon-right-arrow:before {
+	content: "\e660";
+}
+.panjiva-icon-up-arrow:before {
+	content: "\e661";
+}
