--- a/css/main.css
+++ b/css/main.css
@@ -512,6 +512,26 @@
   content: "\e65d";
 }
 
+/* line 331, _fonts.scss */
+.panjiva-icon-down-arrow:before {
+  content: "\e65e";
+}
+
+/* line 334, _fonts.scss */
+.panjiva-icon-left-arrow:before {
+  content: "\e65f";
+}
+
+/* line 337, _fonts.scss */
+.panjiva-icon-right-arrow:before {
+  content: "\e660";
+}
+
+/* line 340, _fonts.scss */
+.panjiva-icon-up-arrow:before {
+  content: "\e661";
+}
+
 /* This CSS resource incorporates links to font software which is the valuable copyrighted property of Monotype Imaging and/or its suppliers. You may not attempt to copy, install, redistribute, convert, modify or reverse engineer this font software. Please contact Monotype Imaging with any questions regarding Web Fonts:  http://webfonts.fonts.com */
 /* line 1, _styleguide.scss */
 #color .swatch {
