update sidenav and more icon

--- a/css/main.css
+++ b/css/main.css
@@ -532,6 +532,11 @@
   content: "\e661";
 }
 
+/* line 343, _fonts.scss */
+.panjiva-icon-more:before {
+  content: "\e662";
+}
+
 /* This CSS resource incorporates links to font software which is the valuable copyrighted property of Monotype Imaging and/or its suppliers. You may not attempt to copy, install, redistribute, convert, modify or reverse engineer this font software. Please contact Monotype Imaging with any questions regarding Web Fonts:  http://webfonts.fonts.com */
 /* line 1, _styleguide.scss */
 #color .swatch {
